--- a/index.html
+++ b/index.html
@@ -10,15 +10,9 @@
     <div id="content"></div>
 
     <script>
-        function getCookie(name) {
-            const value = `; ${document.cookie}`;
-            const parts = value.split(`; ${name}=`);
-            if (parts.length === 2) return parts.pop().split(';').shift();
-        }
+        const authToken = localStorage.getItem("authToken");
 
-        const authToken = getCookie("authToken");
-
-        if (authToken && authToken === "someAuthToken") {
+        if (authToken) {
             document.getElementById("content").innerHTML = "<p>You are authenticated.</p>";
         } else {
             document.getElementById("content").innerHTML = '<p>You are not authenticated. <a href="login.html">Login</a></p>';
