--- a/login.html
+++ b/login.html
@@ -35,8 +35,8 @@
                 if (xhr.readyState === 4) {
                     if (xhr.status === 200) {
                         const data = JSON.parse(xhr.responseText);
-                        const authToken = data.token;
-                        document.cookie = `authToken=${authToken}; path=/`;
+                        localStorage.setItem("authToken", data.token);
+
                         window.location.href = "index.html";
                     } else {
                         console.error(`Failed with status: ${xhr.status}`);
