--- a/index.html
+++ b/index.html
@@ -8,18 +8,29 @@
 <body>
     <h1>Voucher generator</h1>
     <div id="content"></div>
-    <div id="products"></div>
+    <table id="products">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>ID</th>
+                <th>Description</th>
+                <th>Amount to Generate</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Products will be inserted here -->
+        </tbody>
+    </table>
+    <button onclick="generateVouchers()">Generate!</button>
 
     <script>
         const API_BASE = "https://core.prd.analogio.dk";
         let authToken = localStorage.getItem("authToken");
         let userInfo = {};
 
-        // Step 1: Check for auth token
         if (!authToken) {
             document.getElementById("content").innerHTML = '<p>You are not authenticated. <a href="login.html">Login</a></p>';
         } else {
-            // Step 2: Validate auth token and permissions
             fetch(API_BASE + "/api/v2/account", {
                     headers: {
                         "Authorization": `Bearer ${authToken}`
@@ -34,30 +45,45 @@
                 })
                 .then(data => {
                     userInfo = data;
-                    // Step 2.5: Check role
                     if (userInfo.role === "Customer" || userInfo.role === "Barista") {
                         throw new Error("You don't have rights to generate vouchers.");
                     }
-                    // Step 3: Display name and email
                     document.getElementById("content").innerHTML = `<p>Hi ${userInfo.name} (${userInfo.email})</p>`;
-                    // Step 4: Fetch products
                     return fetch(API_BASE + "/api/v1/Products");
                 })
                 .then(response => response.json())
                 .then(data => {
-                    // Step 5: Display products
-                    let productHTML = "<ul>";
+                    let productHTML = "";
                     data.forEach(product => {
-                        productHTML += `<li>${product.name} (ID: ${product.id}) - ${product.description}</li>`;
+                        productHTML += `<tr>
+                            <td>${product.name}</td>
+                            <td>${product.id}</td>
+                            <td>${product.description}</td>
+                            <td><input type="number" id="amount-${product.id}" min="1" value="1"></td>
+                        </tr>`;
                     });
-                    productHTML += "</ul>";
-                    document.getElementById("products").innerHTML = productHTML;
+                    document.getElementById("products").querySelector("tbody").innerHTML = productHTML;
                 })
                 .catch(error => {
                     console.error(error);
                     document.getElementById("content").innerHTML = '<p>' +
                         error + ' <a href="login.html">Login</a></p>';
                 });
+        }
+
+        function generateVouchers() {
+            const tableRows = document.getElementById("products").querySelectorAll("tbody tr");
+            let summary = "You will generate vouchers for:\n";
+
+            tableRows.forEach(row => {
+                const name = row.cells[0].innerText;
+                const id = row.cells[1].innerText;
+                const amount = document.getElementById(`amount-${id}`).value;
+
+                summary += `${name} (ID: ${id}) - Amount: ${amount}\n`;
+            });
+
+            alert(summary);
         }
     </script>
 </body>
